Only mvn, no ant and skip javadoc, upgrade testing framework